docs(jolt): adopt jolt-lang/http-client for direct non-stream, reject glimmer-tui/JLine-ffi
- jolt-port B1: jolt-lang/http-client covers unproxied non-stream slice;
  streaming + proxy + cancel stay on curl-subprocess transport
- jolt-tui: JLine stays bb default; glimmer-tui rejected (fullscreen
  ncurses vs inline ANSI model); FFI appendix evaluated, not adopted
- ignore .jolt/ cpcache